# kasumi_pet

./: .gitignore  CLAUDE.md  README.md
frontend/: .gitignore  IDENTITY.md  SOUL.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/characters/kasumi/: character.json
frontend/public/: settings.css  settings.html  settings.js
frontend/src/: main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/characters/kasumi/: character.json  profile.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
frontend/src/core/: PetController.ts
frontend/src/data/: affection-store.ts  character-loader.ts
frontend/src/styles/: main.css
frontend/src/types/: pet.ts
rag/: README.md  crawler.py
