[package]
name = "kasumi-desktop-pet"
version = "1.0.0"
description = "学习伴侣桌宠 - 户山香澄"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "clipboard-read-text", "window-set-size", "http-request", "macos-private-api", "window-show", "window-close", "window-hide", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cocoa = "0.25"
objc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
